<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>first_pubsub</name>
  <version>0.0.0</version>
  <description>Logger Package</description>
  <maintainer email="azharanas173@gmail.com">azharanas17</maintainer>
  <license>MIT License</license>

  <depend>first_interfaces</depend>
  <depend>rclcpp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
